# cpp-coso

./: .gitignore  CMakeLists.txt  README.md  appicon.rc  docg.conf  index.html  main.[prod].bundle.js  reportUT.xml  reports.xml  sonar-project.properties  vcpkg.json  versioninfo.rc.cmake.in
.github/workflows/: clang-tidy.yml  codeql-analysis.yml  default.yml  release.yml
delivery/: release-note.md
delivery/0.1.0/: annotated.html  annotated_dup.js  classes.html  cpp-coso-0.1.0-Darwin.dmg  cpp-coso-0.1.0-Linux.deb  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_aedf01756c5a09dce27d21bf4c3c9d44.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
delivery/0.1.0/doc/: dir_000000_000001.html  dir_aedf01756c5a09dce27d21bf4c3c9d44.js  files.html  globals_func.html
delivery/0.1.0/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_0.js  functions_3.js  variables_1.js
delivery/0.2.0/: annotated_dup.js  cpp-coso-0.2.0-Darwin.dmg  cpp-coso-0.2.0-Linux.deb  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aedf01756c5a09dce27d21bf4c3c9d44_dep.map  dir_aedf01756c5a09dce27d21bf4c3c9d44_dep.md5  functions_type.html  globals.html  globals_enum.html  globals_func.html  hierarchy.js  inherit_graph_0.md5  inherit_graph_4.md5  inherits.html  navtreedata.js  navtreeindex0.js
delivery/0.2.0/doc/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_aedf01756c5a09dce27d21bf4c3c9d44.html  dir_aedf01756c5a09dce27d21bf4c3c9d44.js  functions.html  globals_vars.html  hierarchy.html  inherit_graph_2.md5  inherit_graph_4.map
delivery/0.2.0/search/: all_3.js  all_b.js  enumvalues_0.js  enumvalues_3.js  functions_1.js  functions_3.js  functions_a.js
delivery/0.2.1/: cpp-coso-0.2.1-Darwin.dmg  cpp-coso-0.2.1-Linux.deb  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  functions_func.html  functions_vars.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map
delivery/0.2.1/doc/: dir_000000_000002.html  dir_03f4a28f75b8e23e1d457d2da09125b3.html  inherit_graph_3.map  menudata.js
delivery/0.2.1/search/: all_1.js  all_2.js  all_5.js  all_7.js  all_8.js  all_c.js  classes_2.js  classes_5.js  enums_0.js  enumvalues_1.js  searchdata.js  variables_0.js  variables_1.js
delivery/0.2.2/: annotated.html  cpp-coso-0.2.2-Darwin.dmg  cpp-coso-0.2.2-Linux.deb  dir_000002_000001.html  dir_03f4a28f75b8e23e1d457d2da09125b3.js  dir_aedf01756c5a09dce27d21bf4c3c9d44_dep.map  files.html  functions.html  functions_func.html  functions_vars.html
delivery/0.2.2/doc/: dir_000000_000002.html  dir_aedf01756c5a09dce27d21bf4c3c9d44.html  dir_aedf01756c5a09dce27d21bf4c3c9d44_dep.md5  functions_type.html  globals_enum.html  globals_func.html  graph_legend.html  hierarchy.html  inherit_graph_1.md5  inherit_graph_3.md5  menudata.js
delivery/0.2.2/search/: all_2.js  classes_0.js  files_0.js  files_3.js  files_4.js  files_6.js  functions_7.js
delivery/0.2.3/: cpp-coso-0.2.3-Darwin.dmg  cpp-coso-0.2.3-Linux.deb
delivery/0.2.3/doc/: classes.html  dir_03f4a28f75b8e23e1d457d2da09125b3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  globals.html  globals_vars.html  hierarchy.js  index.html  inherits.html  navtreedata.js
delivery/0.3.0/: cpp-coso-0.3.0-Darwin.dmg  cpp-coso-0.3.0-Linux.deb  cpp-coso-0.3.0-Linux.rpm
delivery/0.3.0/doc/: annotated.html  annotated_dup.js  classes.html  dir_000000_000002.html  dir_000002_000001.html  dir_03f4a28f75b8e23e1d457d2da09125b3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  files.html  functions.html  (+20 more)
delivery/0.3.1/: cpp-coso-0.3.1-Darwin.dmg  cpp-coso-0.3.1-Linux.deb  cpp-coso-0.3.1-Linux.rpm
delivery/0.3.2/: cpp-coso-0.3.2-Darwin.dmg  cpp-coso-0.3.2-Linux.deb  cpp-coso-0.3.2-Linux.rpm
scripts/: build.bat  build_vs.bat  cmake_build.bat
scripts/delivery-note-generator/: .eslintrc.js  .gitignore  .prettierrc  .stylelintrc.json  index.html  index.scss  index.scss.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.ts
scripts/project-updater/: .gitignore  index.ts  package-lock.json  package.json  project-update.config.json  tsconfig.json
src/: Application.cpp  Application.hpp  main.cpp
src/exception/: ConversionException.hpp  CppCosoException.hpp  ValidationException.hpp
src/report/: ClangTidyIssueReportConvertor.cpp  ClangTidyIssueReportConvertor.hpp  CppCheckIssueReportConvertor.cpp  CppCheckIssueReportConvertor.hpp  GccCompileLogIssueReportConvertor.cpp  GccCompileLogIssueReportConvertor.hpp  GccCompileWarningIssueReportConvertor.cpp  GccCompileWarningIssueReportConvertor.hpp  IssueReportConvertor.cpp  IssueReportConvertor.hpp  MsvcCompileWarningIssueReportConvertor.cpp  MsvcCompileWarningIssueReportConvertor.hpp  MvscCompileWarningIssueReportConvertor.cpp  MvscCompileWarningIssueReportConvertor.hpp  ReportConvertor.cpp  ReportConvertor.hpp  TestConvertor.cpp  TestConvertor.hpp  TextLogIssueReportConvertor.cpp  TextLogIssueReportConvertor.hpp  UnixTextLogReportConvertor.cpp  UnixTextLogReportConvertor.hpp  convertor.cpp  convertor.hpp
test/resources/: clang-tidy-sonarqube-report.json  clang_tidy_report.txt  cppcheck-sonarqube-report.json  gcc-warning-report.txt  msvc-warning-sonarqube-report.txt  mvsc-warning-report.txt  mvsc-warning-sonarqube-report.txt  reportUT.xml  reports.xml
test/ut/: main.cpp  testBoostTestFwkResultConvertor.cpp  testClangTidyIssueConvertor.cpp  testCppCheckIssueConvertor.cpp  testEntries.cpp  testGccWarningIssueConvertor.cpp  testMvscWarningIssueConvertor.cpp
wiki/: gestion-projet.md  gestion-version.md  manifest-description.md  strategie-tests.md  stratégie-tests.md
(+730 files in other folders)
